--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "overrides": {
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "2.1.4"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
