--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "chfusa-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4242",
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.21.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "stripe": "^16.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +45,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
   }
